SL-Ebene: remove some obsolete placies & creatures

--- a/mod/area/area042.git.yml
+++ b/mod/area/area042.git.yml
@@ -16,202 +16,8 @@ AreaProperties:
     MusicNight: {type: :int, value: 78}
 Creature List: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 4
-    Appearance_Type: {type: :word, value: 226}
-    BodyBag: {type: :byte, value: 0}
-    CRAdjust: {type: :int, value: 0}
-    Cha: {type: :byte, value: 10}
-    ChallengeRating: {type: :float, value: 1.0}
-    ClassList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        Class: {type: :int, value: 20}
-        ClassLevel: {type: :short, value: 1}
-    Con: {type: :byte, value: 10}
-    Conversation: {type: :resref, value: ""}
-    CurrentHitPoints: {type: :short, value: 6}
-    DecayTime: {type: :dword, value: 5000}
-    Deity: {type: :cexostr, value: ""}
-    Description: 
-      type: :cexolocstr
-      value: {}
+  value: []
 
-    Dex: {type: :byte, value: 10}
-    Disarmable: {type: :byte, value: 0}
-    Equip_ItemList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 2
-        AddCost: {type: :dword, value: 0}
-        ArmorPart_Belt: {type: :byte, value: 15}
-        ArmorPart_LBicep: {type: :byte, value: 10}
-        ArmorPart_LFArm: {type: :byte, value: 1}
-        ArmorPart_LFoot: {type: :byte, value: 8}
-        ArmorPart_LHand: {type: :byte, value: 1}
-        ArmorPart_LShin: {type: :byte, value: 9}
-        ArmorPart_LShoul: {type: :byte, value: 0}
-        ArmorPart_LThigh: {type: :byte, value: 8}
-        ArmorPart_Neck: {type: :byte, value: 1}
-        ArmorPart_Pelvis: {type: :byte, value: 35}
-        ArmorPart_RBicep: {type: :byte, value: 10}
-        ArmorPart_RFArm: {type: :byte, value: 1}
-        ArmorPart_RFoot: {type: :byte, value: 8}
-        ArmorPart_RHand: {type: :byte, value: 1}
-        ArmorPart_RShin: {type: :byte, value: 9}
-        ArmorPart_RShoul: {type: :byte, value: 0}
-        ArmorPart_RThigh: {type: :byte, value: 8}
-        ArmorPart_Robe: {type: :byte, value: 0}
-        ArmorPart_Torso: {type: :byte, value: 19}
-        BaseItem: {type: :int, value: 16}
-        Charges: {type: :byte, value: 0}
-        Cloth1Color: {type: :byte, value: 3}
-        Cloth2Color: {type: :byte, value: 14}
-        Cost: {type: :dword, value: 10}
-        Cursed: {type: :byte, value: 0}
-        DescIdentified: 
-          type: :cexolocstr
-          value: {}
-
-        Description: 
-          type: :cexolocstr
-          value: {}
-
-        Identified: {type: :byte, value: 1}
-        Leather1Color: {type: :byte, value: 3}
-        Leather2Color: {type: :byte, value: 3}
-        LocalizedName: 
-          type: :cexolocstr
-          value: 
-            0: Einfache braune Kleidung
-        Metal1Color: {type: :byte, value: 7}
-        Metal2Color: {type: :byte, value: 7}
-        Plot: {type: :byte, value: 0}
-        PropertiesList: 
-          type: :list
-          value: []
-
-        StackSize: {type: :word, value: 1}
-        Stolen: {type: :byte, value: 0}
-        Tag: {type: :cexostr, value: Kleidung017}
-        TemplateResRef: {type: :resref, value: kleidung017}
-        XOrientation: {type: :float, value: 0.0}
-        XPosition: {type: :float, value: -1.0}
-        YOrientation: {type: :float, value: 1.0}
-        YPosition: {type: :float, value: -1.0}
-        ZPosition: {type: :float, value: -1.0}
-    FactionID: {type: :word, value: 2}
-    FeatList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 1, Feat: {type: :word, value: 258}}
-    FirstName: 
-      type: :cexolocstr
-      value: 
-        0: C.M.O.T.
-    Gender: {type: :byte, value: 0}
-    GoodEvil: {type: :byte, value: 50}
-    HitPoints: {type: :short, value: 6}
-    Int: {type: :byte, value: 10}
-    Interruptable: {type: :byte, value: 1}
-    IsImmortal: {type: :byte, value: 0}
-    IsPC: {type: :byte, value: 0}
-    LastName: 
-      type: :cexolocstr
-      value: 
-        0: Dibbler
-    LawfulChaotic: {type: :byte, value: 50}
-    Lootable: {type: :byte, value: 0}
-    MaxHitPoints: {type: :short, value: 6}
-    NaturalAC: {type: :byte, value: 0}
-    NoPermDeath: {type: :byte, value: 0}
-    PerceptionRange: {type: :byte, value: 11}
-    Phenotype: {type: :int, value: 0}
-    Plot: {type: :byte, value: 0}
-    PortraitId: {type: :word, value: 129}
-    Race: {type: :byte, value: 6}
-    ScriptAttacked: {type: :resref, value: ""}
-    ScriptDamaged: {type: :resref, value: ""}
-    ScriptDeath: {type: :resref, value: ""}
-    ScriptDialogue: {type: :resref, value: merchant_conv}
-    ScriptDisturbed: {type: :resref, value: ""}
-    ScriptEndRound: {type: :resref, value: ""}
-    ScriptHeartbeat: {type: :resref, value: ""}
-    ScriptOnBlocked: {type: :resref, value: ""}
-    ScriptOnNotice: {type: :resref, value: ""}
-    ScriptRested: {type: :resref, value: ""}
-    ScriptSpawn: {type: :resref, value: ""}
-    ScriptSpellAt: {type: :resref, value: ""}
-    ScriptUserDefine: {type: :resref, value: ""}
-    SkillList: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 4}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-      - !nwn-lib.elv.es,2008-12/struct {__struct_id: 0, Rank: {type: :byte, value: 0}}
-    SoundSetFile: {type: :word, value: 249}
-    SpecAbilityList: 
-      type: :list
-      value: []
-
-    StartingPackage: {type: :byte, value: 82}
-    Str: {type: :byte, value: 10}
-    Subrace: {type: :cexostr, value: ""}
-    Tag: {type: :cexostr, value: cmotdibbler}
-    Tail: {type: :byte, value: 0}
-    TemplateList: 
-      type: :list
-      value: []
-
-    TemplateResRef: {type: :resref, value: bauer}
-    VarTable: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Name: {type: :cexostr, value: wander}
-        Type: {type: :dword, value: 1}
-        Value: {type: :int, value: 1}
-    WalkRate: {type: :int, value: 7}
-    Wings: {type: :byte, value: 0}
-    Wis: {type: :byte, value: 10}
-    XOrientation: {type: :float, value: 0.5556}
-    XPosition: {type: :float, value: 22.1453}
-    YOrientation: {type: :float, value: 0.8315}
-    YPosition: {type: :float, value: 9.0258}
-    ZPosition: {type: :float, value: -0.0}
-    fortbonus: {type: :short, value: 0}
-    refbonus: {type: :short, value: 0}
-    willbonus: {type: :short, value: 0}
 Door List: 
   type: :list
   value: 
@@ -220,7 +26,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 60}
@@ -232,7 +38,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 25}
-    GenericType: {type: :byte, value: 2}
+    GenericType_New: {type: :dword, value: 2}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 10}
     Interruptable: {type: :byte, value: 1}
@@ -295,7 +101,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 25}
-    GenericType: {type: :byte, value: 2}
+    GenericType_New: {type: :dword, value: 2}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 10}
     Interruptable: {type: :byte, value: 1}
@@ -346,7 +152,7 @@ Door List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 0}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
     CurrentHP: {type: :short, value: 60}
@@ -358,7 +164,7 @@ Door List:
     DisarmDC: {type: :byte, value: 20}
     Faction: {type: :dword, value: 1}
     Fort: {type: :byte, value: 25}
-    GenericType: {type: :byte, value: 2}
+    GenericType_New: {type: :dword, value: 2}
     HP: {type: :short, value: 60}
     Hardness: {type: :byte, value: 10}
     Interruptable: {type: :byte, value: 1}
@@ -798,7 +604,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 179}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -863,7 +669,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 179}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -928,7 +734,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 179}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -993,7 +799,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 179}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1058,7 +864,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 179}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -1123,7 +929,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 179}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -4701,9 +4507,9 @@ Placeable List:
     Type: {type: :byte, value: 0}
     Useable: {type: :byte, value: 1}
     Will: {type: :byte, value: 0}
-    X: {type: :float, value: 32.976}
-    Y: {type: :float, value: 18.7187}
-    Z: {type: :float, value: 0.0}
+    X: {type: :float, value: 37.352}
+    Y: {type: :float, value: 21.3602}
+    Z: {type: :float, value: -0.0}
   - !nwn-lib.elv.es,2008-12/struct 
     __struct_id: 9
     AnimationState: {type: :byte, value: 0}
@@ -4928,7 +4734,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 311}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: 3.1416}
+    Bearing: {type: :float, value: -3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -5006,7 +4812,7 @@ Placeable List:
     AnimationState: {type: :byte, value: 0}
     Appearance: {type: :dword, value: 311}
     AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -3.1416}
+    Bearing: {type: :float, value: 3.1416}
     BodyBag: {type: :byte, value: 0}
     CloseLockDC: {type: :byte, value: 0}
     Conversation: {type: :resref, value: ""}
@@ -5268,77 +5074,6 @@ Placeable List:
     X: {type: :float, value: 30.5431}
     Y: {type: :float, value: 11.889}
     Z: {type: :float, value: 0.0}
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 9
-    AnimationState: {type: :byte, value: 0}
-    Appearance: {type: :dword, value: 471}
-    AutoRemoveKey: {type: :byte, value: 0}
-    Bearing: {type: :float, value: -1.5708}
-    BodyBag: {type: :byte, value: 0}
-    CloseLockDC: {type: :byte, value: 0}
-    Conversation: {type: :resref, value: ""}
-    CurrentHP: {type: :short, value: 10}
-    Description: 
-      type: :cexolocstr
-      value: 
-        0: Eine Juwelenschleifmaschine.
-    DisarmDC: {type: :byte, value: 0}
-    Faction: {type: :dword, value: 1}
-    Fort: {type: :byte, value: 5}
-    HP: {type: :short, value: 10}
-    Hardness: {type: :byte, value: 5}
-    HasInventory: {type: :byte, value: 1}
-    Interruptable: {type: :byte, value: 1}
-    KeyName: {type: :cexostr, value: ""}
-    KeyRequired: {type: :byte, value: 0}
-    LocName: 
-      type: :cexolocstr
-      value: 
-        0: "Handwerk: ItemProperty"
-    Lockable: {type: :byte, value: 0}
-    Locked: {type: :byte, value: 0}
-    OnClick: {type: :resref, value: ""}
-    OnClosed: {type: :resref, value: craft_ip_close}
-    OnDamaged: {type: :resref, value: ""}
-    OnDeath: {type: :resref, value: ""}
-    OnDisarm: {type: :resref, value: ""}
-    OnHeartbeat: {type: :resref, value: ""}
-    OnInvDisturbed: {type: :resref, value: ""}
-    OnLock: {type: :resref, value: ""}
-    OnMeleeAttacked: {type: :resref, value: ""}
-    OnOpen: {type: :resref, value: ""}
-    OnSpellCastAt: {type: :resref, value: ""}
-    OnTrapTriggered: {type: :resref, value: ""}
-    OnUnlock: {type: :resref, value: ""}
-    OnUsed: {type: :resref, value: ""}
-    OnUserDefined: {type: :resref, value: ""}
-    OpenLockDC: {type: :byte, value: 0}
-    Plot: {type: :byte, value: 1}
-    PortraitId: {type: :word, value: 1018}
-    Ref: {type: :byte, value: 0}
-    Static: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: hws_itemprop}
-    TemplateResRef: {type: :resref, value: hws_itemprop}
-    TrapDetectDC: {type: :byte, value: 0}
-    TrapDetectable: {type: :byte, value: 1}
-    TrapDisarmable: {type: :byte, value: 1}
-    TrapFlag: {type: :byte, value: 0}
-    TrapOneShot: {type: :byte, value: 1}
-    TrapType: {type: :byte, value: 0}
-    Type: {type: :byte, value: 0}
-    Useable: {type: :byte, value: 1}
-    VarTable: 
-      type: :list
-      value: 
-      - !nwn-lib.elv.es,2008-12/struct 
-        __struct_id: 0
-        Name: {type: :cexostr, value: consume}
-        Type: {type: :dword, value: 1}
-        Value: {type: :int, value: 0}
-    Will: {type: :byte, value: 0}
-    X: {type: :float, value: 37.7165}
-    Y: {type: :float, value: 23.4015}
-    Z: {type: :float, value: -0.0}
 SoundList: 
   type: :list
   value: []
@@ -5361,29 +5096,5 @@ VarTable:
     Value: {type: :int, value: 1}
 WaypointList: 
   type: :list
-  value: 
-  - !nwn-lib.elv.es,2008-12/struct 
-    __struct_id: 5
-    Appearance: {type: :byte, value: 3}
-    Description: 
-      type: :cexolocstr
-      value: 
-        4: ""
-    HasMapNote: {type: :byte, value: 0}
-    LinkedTo: {type: :cexostr, value: ""}
-    LocalizedName: 
-      type: :cexolocstr
-      value: 
-        0: area_marker
-    MapNote: 
-      type: :cexolocstr
-      value: {}
+  value: []
 
-    MapNoteEnabled: {type: :byte, value: 0}
-    Tag: {type: :cexostr, value: area_marker}
-    TemplateResRef: {type: :resref, value: area_marker}
-    XOrientation: {type: :float, value: 0.0}
-    XPosition: {type: :float, value: 15.9276}
-    YOrientation: {type: :float, value: 1.0}
-    YPosition: {type: :float, value: 24.4209}
-    ZPosition: {type: :float, value: 0.0}
